--- a/pyteos/docs/source/01.InstallingEOSFactory.md
+++ b/pyteos/docs/source/01.InstallingEOSFactory.md
@@ -8,7 +8,11 @@ We've tested EOSFactory on the following platforms:
 - MacOS 10.13.4
 - Windows 10 (version 1803)
 
-**NOTE:**  EOSFactory is compatible with the latest EOSIO release, i.e. `dawn-v4.0.0`.
+**NOTE:** EOSFactory is compatible with the latest *EOSIO* release, i.e. `dawn-v4.0.0`. 
+
+**NOTE:** EOSFactory requires *EOSIO* o be compiled from the source code, i.e. not deployed in Docker.
+
+**NOTE:** Regarding Ubuntu, if you are using a server edition (i.e. not desktop), you'll need to have `gnome-terminal` and an X server installed.
 
 ## Prerequisites for Ubuntu & MacOS
 
