--- a/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
@@ -20,9 +20,9 @@ import node
 node.reset()
 ```
 
-In Ubuntu & MacOS the *EOSIO* process is run in the background with no visible interface. However in Windows it's launched in a separate window.
+On MacOS the *EOSIO* process is run in the background with no visible interface. However in Ubuntu & Windows it's launched in a separate window.
 
-To get information about the testnet:
+To verify the *EOSIO* node is running or to get information about the current state of the testnet:
 
 ```
 node.info()
@@ -152,7 +152,7 @@ contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":
 
 ## Transfer EOS Tokens
 
-Now that `alice` has tokens, we will transfer some to the `carol` account: 
+Now that `alice` has tokens, we will transfer some of them to `carol`: 
 
 ```
 contract.push_action("transfer", '{"from":"alice", "to":"carol", "quantity":"25.0000 EOS", "memo":"memo"}', sess.alice)
