--- a/pyteos/docs/source/04.UnitTestingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/04.UnitTestingEOSContractsUsingEOSFactoryInVSC.md
@@ -26,8 +26,8 @@ def run():
     # Your unit-test goes here #
     ############################
     
-    print("Test OK")
     node.stop()
+    print("Test OK")
     
 if __name__ == "__main__":
     run()
@@ -65,8 +65,8 @@ def run():
     assert t2.json["rows"][0]["balance"] == '11.0000 EOS'
     assert t3.json["rows"][0]["balance"] == '12.0000 EOS'
 
-    print("Test OK")
     node.stop()
+    print("Test OK")
     
 if __name__ == "__main__":
     run()
@@ -181,9 +181,9 @@ test node.stop():
 
 Test OK
 ```
-## The *Tic-Tac-Toe* game example
+## The *Tic-Tac-Toe* game
 
-Here is a unit-test for the *Tic-Tac-Toe* contract:
+Here is a unit-test for the *Tic-Tac-Toe* game contract:
 
 ```
 import node
@@ -241,10 +241,10 @@ def run():
     assert t.json["rows"][0]["board"][7] == '0'
     assert t.json["rows"][0]["board"][8] == '0'
 
-    c.push_action("close", '{"challenger":"alice", "host":"bob"}', sess.bob)
+   	c.push_action("close", '{"challenger":"alice", "host":"bob"}', sess.bob)
 
-    print("Test OK")
     node.stop()
+    print("Test OK")
 
 if __name__ == "__main__":
     run()
@@ -377,13 +377,13 @@ Test OK
 
 The above schema is just a proof-of-concept solution for unit-testing in EOSFactory. What's definitely missing is clear separation between EOSFactory source code and a user's workspace where all his contracts & unit-tests are stored. This will be supplied in the next release.
 
-For the time being you can keep your contracts in a separate location and refer to them using the entire path, e.g.
+For the time being you can keep your contracts in a separate location and refer to them using a full path, e.g.
 
 ```
 c = Contract("/mnt/x/Workspaces/contracts/hello")
 ```
 
-However, when you create a new contract from the template, paths are not currently supported, so you need to use the folder name e.g.
+However, when you create a new contract from the template, paths are not currently supported, so you need to use the contract's folder name e.g.
 
 ```
 c = Template("hello")
@@ -397,4 +397,4 @@ c.path()
 
 And then you can move your contract to a desired location and work there.
 
-Ultimately we want to make unit-testing much better organized and integrated more tightly with *Visual Studio Code*.
+Ultimately we want to make unit-testing much better organized and integrated with *Visual Studio Code*.
