--- a/pyteos/docs/source/01.InstallingEOSFactory.md
+++ b/pyteos/docs/source/01.InstallingEOSFactory.md
@@ -10,7 +10,7 @@ We've tested EOSFactory on the following platforms:
 
 **NOTE:** EOSFactory is compatible with the latest *EOSIO* release, i.e. `dawn-v4.0.0`. 
 
-**NOTE:** EOSFactory requires *EOSIO* o be compiled from the source code, i.e. not deployed in Docker.
+**NOTE:** EOSFactory requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
 
 **NOTE:** Regarding Ubuntu, if you are using a server edition (i.e. not desktop), you'll need to have `gnome-terminal` and an X server installed.
 
@@ -23,7 +23,7 @@ We've tested EOSFactory on the following platforms:
 
 - We assume that you have [*Windows Subsystem for Linux*](https://en.wikipedia.org/wiki/Windows_Subsystem_for_Linux) (WSL) installed. If that's not the case, please refer to [this guide](https://docs.microsoft.com/en-us/windows/wsl/install-win10).
 - We also assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). The only option you have regarding *EOSIO* installation is building it in the Ubuntu bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
-- And finally, we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.5 by default.
+- And finally, we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.5 by default.
 
 ## Build EOSFactory on Ubuntu & MacOS
 
@@ -51,13 +51,13 @@ Then run the `build` script by pointing it to the *EOSIO* source code:
 ./build.sh -e ~/Workspaces/EOS/eos
 ```
 
-And finally, load system variables created during installation. The command may differ depending on your system. If you are on Ubuntu use this:
+And finally, load the system variables that were created during installation. The command may differ depending on your system. If you are on Ubuntu:
 
 ```
 source ~/.bashrc
 ```
 
-And if you are on MacOS use this:
+And if you are on MacOS:
 
 ```
 source ~/.bash_profile
@@ -71,7 +71,7 @@ Clone EOSFactory source code from the repository:
 git clone https://github.com/tokenika/eosfactory.git
 ```
 
-**NOTE:** We recommend cloning EOSFactory in the Windows file structure and building it in WSL.
+**NOTE:** We recommend keeping EOSFactory in the Windows file structure, not WSL.
 
 Open a WSL bash terminal and navigate to the `eosfactory` folder:
 
@@ -103,9 +103,9 @@ If you have the latest WSL release, this assumption is most likely valid. Howeve
 setx.exe "HOME" %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs\\home\\$USER
 ```
 
-**NOTE:** Replace `CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc` with the appropriate folder name matching your WSL location. If you are unsure what the path is in your case, open *Windows Explorer*, navigate to the  `%LocalAppData%\\Packages` folder and search for `rootfs`.
+**NOTE:** If you are unsure what the path is in your case, open *Windows Explorer*, navigate to the  `%LocalAppData%\\Packages` folder and search for `rootfs`.
 
-And finally, load system variables created during installation:
+And finally, load the system variables that were created during installation:
 
 ```
 source ~/.bashrc
