--- a/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
@@ -6,14 +6,14 @@ The purpose of this tutorial is to demonstrate how EOSFactory and its Python CLI
 
 * This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
 * We also assume that you are familiar with the material covered in [Interacting with EOS Contracts in EOSFactory](02.InteractingWithEOSContractsInEOSFactory.html).
-* EOSFactory is fully compatible with [Visual Studio Code](https://code.visualstudio.com) which is a very convenient tool when working with smart-contract code. To install it, please refer to [this webpage](https://code.visualstudio.com/download).
+* EOSFactory is fully compatible with [Visual Studio Code](https://code.visualstudio.com) which is a very convenient tool when working with smart-contract code. To install it please refer to [this webpage](https://code.visualstudio.com/download).
 * Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://github.com/EOSIO/eos/wiki/Tutorial-Hello-World-Contract), as it presents the default way to compile and deploy smart-contracts in EOS. What we present here is an alternative.
 
 ## Configure *Visual Studio Code* (VSC)
 
 Start *Visual Studio Code* (VSC) and inside VSC open the `eosfactory` folder.
 
-In you are on Windows, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option:
+In you are on Windows, to get access to WSL bash terminal in VSC, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option:
 
 ```
 "terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
@@ -44,7 +44,7 @@ from eosf import *
 contract = Template("hello")
 ```
 
-**NOTE:**  For naming contracts use names that are compatible with EOS requirements regarding account names - this is because for each contract EOSFactory creates an account associated with it and this account is has the same name as the contract. So for example underscores are not allowed, use dots instead, and the names cannot be longer than 12 characters. This is a temporary limitation, it will be removed in the future.
+**NOTE:**  For naming contracts use letters `a-z`, `A-Z`, numbers `0-9`, underscores `_` and dots `.`.
 
 To check the directory where the contract's files are located:
 
@@ -102,7 +102,7 @@ contract.deploy()
 
 ## Test the Contract
 
-We can play with the contract giving it different arguments:
+You can play with the contract giving it different arguments:
 
 ```
 contract.push_action("hi", '{"user":"alice"}', sess.alice)
@@ -131,7 +131,7 @@ Re-compile the contract:
 contract.build()
 ```
 
-The following step is optional, as you can re-deploy the contract on the same testnet. However, if you want to reset the testnet, use these commands:
+The following step is optional, as you can re-deploy the contract on the existing testnet. However, if you want to reset the testnet, use these commands:
 
 ```
 node.reset()
@@ -170,7 +170,7 @@ contract.delete()
 
 ## Using *CMake* and *IntelliSense* in *Visual Studio Code*
 
-You can use *CMake* routines to build a contract, provided it has been created in EOSFactory from a template, as described above:
+You can use *CMake* routines to build a contract, provided it has been created in EOSFactory from a template, e.g.
 
 ```
 from eosf import *
@@ -197,7 +197,7 @@ Scanning dependencies of target wast
 [100%] Built target wast
 ```
 
-This way, if you open a specific contract folder (e.g. `tic.tac.toe` ) in *Visual Studio Code*, you'll be able to compile your contract using a prefabricated VSC task macro, by choosing the `Run Build Task` option from the VSC menu, or just by applying the `Crtl+Shift+B` shortcut.
+This way, if you open a specific contract folder (e.g. `tic.tac.toe` ) in *Visual Studio Code*, you'll be able to compile your contract using a prefabricated VSC task macro. To do it choose the `Run Build Task` option from the VSC menu, or just by apply the `Crtl+Shift+B` shortcut.
 
 Here is how the output of an automated build process might look like:
 
