--- a/pyteos/docs/source/01.InstallingEOSFactory.md
+++ b/pyteos/docs/source/01.InstallingEOSFactory.md
@@ -10,19 +10,17 @@ We've tested EOSFactory on the following platforms:
 
 **NOTE:** EOSFactory is compatible with the latest *EOSIO* release, i.e. `dawn-v4.0.0`. 
 
-**NOTE:** EOSFactory requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
-
-**NOTE:** Regarding Ubuntu, if you are using a server edition (i.e. not desktop), you'll need to have `gnome-terminal` and an X server installed.
-
 ## Prerequisites for Ubuntu & MacOS
 
-* We assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment).
+* Regarding Ubuntu, if you are using a server edition (i.e. not desktop), you'll need to have `gnome-terminal` and an X server installed.
+* We assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). EOSFactory requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
 * We also assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) installed.
 
 ## Prerequisites for Windows
 
 - We assume that you have [*Windows Subsystem for Linux*](https://en.wikipedia.org/wiki/Windows_Subsystem_for_Linux) (WSL) installed. If that's not the case, please refer to [this guide](https://docs.microsoft.com/en-us/windows/wsl/install-win10).
-- We also assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). The only option you have regarding *EOSIO* installation is building it in the Ubuntu bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
+- We also assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). EOSFactory requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
+- The only option you have regarding *EOSIO* installation is building it in the Ubuntu bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
 - And finally, we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.5 by default.
 
 ## Build EOSFactory on Ubuntu & MacOS
