--- a/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
@@ -100,7 +100,7 @@ contract = Contract("/path/to/your/smart-contract/folder")
 contract = Contract("/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
 ```
 
-Alternatively, supply just the name of the folder, if it can be found in a standard location, i.e. `eos/build/contracts` or `eosfactory/contracts`:
+Alternatively, supply just the name of the folder, if it can be found in a standard location, i.e. `eos/build/contracts` or `eosfactory/contracts`. This way you can have an easy access to all demo contracts that are shipped with both *EOSIO* and EOSFactory:
 
 ```
 contract = Contract("eosio.token")
