--- a/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
@@ -168,7 +168,7 @@ contract.delete()
 
 **NOTE:** The above command removes the entire folder.
 
-## Using *CMake* and *IntelliSense* in *Visual Studio Code*
+## Using *CMake* in *Visual Studio Code*
 
 You can use *CMake* routines to build a contract, provided it has been created in EOSFactory from a template, e.g.
 
@@ -197,7 +197,7 @@ Scanning dependencies of target wast
 [100%] Built target wast
 ```
 
-This way, if you open a specific contract folder (e.g. `tic.tac.toe` ) in *Visual Studio Code*, you'll be able to compile your contract using a prefabricated VSC task macro. To do it choose the `Run Build Task` option from the VSC menu, or just by apply the `Crtl+Shift+B` shortcut.
+This way, if you open an individual contract folder (e.g. `tic.tac.toe` ) in *Visual Studio Code*, you'll be able to compile your contract using a prefabricated VSC task macro. To do it choose the `Run Build Task` option from the VSC menu, or just apply the `Crtl+Shift+B` shortcut.
 
 Here is how the output of an automated build process might look like:
 
@@ -210,4 +210,6 @@ Here is how the output of an automated build process might look like:
 Terminal will be reused by tasks, press any key to close it.
 ```
 
-Also, by opening a specific contract folder in VSC you'll be able to make use of VSC [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) feature.
+## Using *IntelliSense* in *Visual Studio Code*
+
+By opening an individual contract folder in VSC you'll also be able to make use of VSC [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) feature. However for that to work you'll need to install the C/C++ IntelliSense extension in VSC.
