--- a/pyteos/docs/source/04.UnitTestingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/04.UnitTestingEOSContractsUsingEOSFactoryInVSC.md
@@ -375,9 +375,9 @@ Test OK
 
 ## Further steps
 
-The above schema is just a proof-of-concept solution for unit-testing in EOSFactory. What's definitely missing is clear separation between EOSFactory source code and a user's workspace where all his contracts & unit-tests are stored. This will be supplied in the next release.
+The above schema is just a proof-of-concept solution for unit-testing in EOSFactory. At this stage we don't handle errors properly and we don't offer proper assertions. These are just toy examples.
 
-For the time being you can keep your contracts in a separate location and refer to them using a full path, e.g.
+What's definitely missing is clear separation between EOSFactory source code and a user's workspace where all his contracts & unit-tests are stored. This will be supplied in the next release. For the time being you can keep your contracts in a separate location and refer to them using a full path, e.g.
 
 ```
 c = Contract("/mnt/x/Workspaces/contracts/hello")
@@ -395,6 +395,6 @@ Then figure out it's location:
 c.path()
 ```
 
-And then you can move your contract to a desired location and work there.
+And then you can move your contract to a desired location and do unit-tests there.
 
-Ultimately we want to make unit-testing much better organized and integrated with *Visual Studio Code*.
+Ultimately we want to make unit-testing much better organized. Also, we'll be aiming at tight integration with *Visual Studio Code*.
