--- a/pyteos/docs/source/04.UnitTestingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/04.UnitTestingEOSContractsUsingEOSFactoryInVSC.md
@@ -383,7 +383,7 @@ What's definitely missing is clear separation between EOSFactory source code and
 c = Contract("/mnt/x/Workspaces/contracts/hello")
 ```
 
-However, when you create a new contract from the template, paths are not currently supported, so you need to use the contract's folder name e.g.
+However, when you create a new contract from a template, paths are not currently supported, so you need to use the contract's folder name e.g.
 
 ```
 c = Template("hello")
@@ -397,4 +397,4 @@ c.path()
 
 And then you can move your contract to a desired location and do unit-tests there.
 
-Ultimately we want to make unit-testing much better organized. Also, we'll be aiming at tight integration with *Visual Studio Code*.
+Ultimately we want to make unit-testing much better organized. Also, we'll be aiming at much tighter integration with *Visual Studio Code*.
