--- a/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
@@ -4,7 +4,7 @@ The purpose of this tutorial is to demonstrate how EOSFactory and its Python CLI
 
 ## Prerequisites
 
-* This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
+* This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory).
 * We also assume that you are familiar with the official [EOS tutorials](https://github.com/EOSIO/eos/wiki/Tutorial-Getting-Started-With-Contracts), as they will give you a broader context and explain the rationale behind EOS smart-contracts.
 
 ## Run Python CLI
