--- a/docs/sphinx/source/05.DevelopmentStatus.md
+++ b/docs/sphinx/source/05.DevelopmentStatus.md
@@ -1,6 +1,6 @@
 ## What works in this release
 
-Using a Python commands you currently can:
+Using Python commands you currently can:
 
 * launch a single-node private testnet and fully control it: stop it and then continue running it or restart it
 * initialize the testnet with the `bios` contract & several test accounts
