--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -8,18 +8,27 @@ We've tested EOSFactory on the following platforms:
 - MacOS 10.13 (High Sierra)
 - Windows 10 (version 1803)
 
-**NOTE:** EOSFactory is compatible with the latest *EOSIO* release, i.e. `dawn-v4.0.0`. 
+**NOTE:** EOSFactory is compatible with the `4.0.0` release of *EOSIO*, tagged as `dawn-v4.0.0`.  If you have been using a more recent *EOSIO* build (e.g. `dawn-v4.2.0`), you'll need to downgrade it to the `dawn-v4.0.0` version by following theses commands:
+
+```
+cd eos
+git checkout dawn-v4.0.0
+git submodule update --init --recursive
+./eosio_build.sh
+```
+
+**NOTE:** EOSFactory requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
 
 ## Prerequisites for Ubuntu & MacOS
 
 * Regarding Ubuntu, if you are using a server edition (i.e. not desktop), you'll need to have `gnome-terminal` and an X server installed.
-* We assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). EOSFactory requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
+* We assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment).
 * We also assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) installed.
 
 ## Prerequisites for Windows
 
 - We assume that you have [*Windows Subsystem for Linux*](https://en.wikipedia.org/wiki/Windows_Subsystem_for_Linux) (WSL) installed. If that's not the case, please refer to [this guide](https://docs.microsoft.com/en-us/windows/wsl/install-win10).
-- We also assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). EOSFactory requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
+- We also assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment).
 - The only option you have regarding *EOSIO* installation is building it in the Ubuntu bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
 - And finally, we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) available in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.5 by default.
 
@@ -40,13 +49,18 @@ cd eosfactory
 Then run the `build` script by pointing it to the *EOSIO* source code:
 
 ```
-./build.sh -e /path/to/your/local/EOSIO/repository
+./build.sh -e /path/to/your/local/EOSIO/repository -w /path/to/your/local/workspace
 ```
 
-**NOTE:** Make sure to supply the correct path - it's meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `~/Workspaces/EOS/eos`, but yours will most probably be different:
+**NOTE:** Make sure to supply the correct paths:
+
+* The first one is meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). 
+* The second one is meant to be the location of your smart-contract workspace. It has to be already existant, so you need to create it manually.
+
+In our case the *EOSIO* location is `~/Workspaces/EOS/eos`, and the workspace location is `~/Workspaces/EOS/contracts`, but yours will most probably be different:
 
 ```
-./build.sh -e ~/Workspaces/EOS/eos
+./build.sh -e ~/Workspaces/EOS/eos -w ~/Workspaces/EOS/eos/contracts
 ```
 
 ## Build EOSFactory on Windows
@@ -68,13 +82,18 @@ cd /mnt/d/Workspaces/EOS/eosfactory
 Then run the `build` script by pointing it to the *EOSIO* source code:
 
 ```
-./build.sh -e /path/to/your/local/EOSIO/repository
+./build.sh -e /path/to/your/local/EOSIO/repository -w /path/to/your/local/workspace
 ```
 
-**NOTE:** Make sure to supply the correct path - it's meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/mnt/d/Workspaces/EOS/eos`, but yours will most probably be different:
+**NOTE:** Make sure to supply the correct paths:
+
+- The first one is meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). 
+- The second one is meant to be the location of your smart-contract workspace. It has to be already existant, so you need to create it manually.
+
+In our case the *EOSIO* location is `/mnt/d/Workspaces/EOS/eos`, and the workspace location is `/mnt/d/Workspaces/EOS/contracts`, but yours will most probably be different:
 
 ```
-./build.sh -e /mnt/d/Workspaces/EOS/eos
+./build.sh -e /mnt/d/Workspaces/EOS/eos -w /mnt/d/Workspaces/EOS/contracts
 ```
 
 **NOTE:** The `build` script assumes that your WSL is located in this directory:
