--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -96,10 +96,14 @@ In our case the *EOSIO* location is `/mnt/d/Workspaces/EOS/eos`, and the workspa
 ./build.sh -e /mnt/d/Workspaces/EOS/eos -w /mnt/d/Workspaces/EOS/contracts
 ```
 
-**NOTE:** The `build` script assumes that your WSL is located in this directory:
+**NOTE:** The `build` script assumes that your WSL is located in one of these two directories:
 
 ```
 %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc
+```
+
+```
+%LocalAppData%\\Packages\\CanonicalGroupLimited.Ubuntu18.04onWindows_79rhkp1fndgsc
 ```
 
 If you have the latest WSL release, this assumption is most likely valid. However, if for some reasons your WSL is in a different location, run the `build` script again with an additional `-o` parameter pointing to your WSL `rootfs` directory, for example:
@@ -128,7 +132,7 @@ At this stage you need to load the system variables that were created during EOS
 The command may differ depending on your system. If you are on Ubuntu or Windows:
 
 ```
-source ~/.bashrc
+source ~/.profile
 ```
 
 And if you are on MacOS:
@@ -150,28 +154,23 @@ cd eosfactory
 And then run those three tests:
 
 ```
-python3 ./tests/test1.py
-python3 ./tests/test2.py
-python3 ./tests/test3.py
+python3 ./tests/unittest1.py
+python3 ./tests/unittest2.py
+python3 ./tests/unittest3.py
 ```
 
-If everything works fine, you should see this message at the end of each test round:
-
-```
-Test OK
-```
 ## Troubleshooting
 
 #### Case 1
 
-If the test fails due to the `can't open file './tests/test1.py'` error, make sure your current working directory is `eosfactory`.
+If the test fails due to the `can't open file './tests/unittest1.py'` error, make sure your current working directory is `eosfactory`.
 
 #### Case 2
 
 If the test fails due to the `ModuleNotFoundError` error, make sure that after building EOSFactory you've loaded the newly created system variables into your terminal:
 
 ```
-source ~/.bashrc
+source ~/.profile
 ```
 
 Or if you are on MacOS:
@@ -196,7 +195,7 @@ git pull
 And then just run:
 
 ```
-./build.sh
+./build.sh -e /path/to/your/local/EOSIO/repository -w /path/to/your/local/workspace
 ```
 
 **NOTE:** After the initial successful installation, unless the path to your *EOSIO* source code has changed, you don't need to supply it when doing subsequent EOSFactory builds, as this path is already stored in your system variables.
