task key bindings

--- a/docs/sphinx/source/tutorials/03.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/03.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -163,17 +163,37 @@ Total Test time (real) =  11.71 sec
 
 Running VSC automated tasks is an alternative to using *CMake* routines described in the previous section. 
 
-To have your code compiled by the `CLANG` compiler navigate to `Tasks -> compile`:
+To have your code compiled by the `CLANG` compiler navigate to `Tasks -> Compile`:
 
 ![compile](./images/compile.png)
 
-To have your code built by the `WASM` compiler navigate to `Tasks -> build`:
+To have your code built by the `WASM` compiler navigate to `Tasks -> Build`:
 
 ![build](./images/build.png)
 
-To run unit tests navigate to `Tasks -> unittest`:
+To run unit tests navigate to `Tasks -> Unittest`:
 
 ![unittest](./images/unittest.png)
+
+You can further speed up your developement cycle by creating key bindings for those tasks, for example:
+
+```
+    {
+        "key": "ctrl+shift+c",
+        "command": "workbench.action.tasks.runTask",
+        "args": "Compile"
+    }
+    {
+        "key": "ctrl+shift+t",
+        "command": "workbench.action.tasks.runTask",
+        "args": "Test"
+    }
+    {
+        "key": "ctrl+shift+u",
+        "command": "workbench.action.tasks.runTask",
+        "args": "Unittest"
+    }
+```
 
 ## Use *IntelliSense* in *Visual Studio Code*
 
