--- a/docs/sphinx/source/tutorials/03.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/03.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -219,6 +219,18 @@ The effect of the above code entry is the following output in test results:
 INFO user: carol @ 8:53:50 contract.name.cpp[16](hi)
 ```
 
-What that means is that the logger offers you not only the value of a variable, but also the exact line number and the file name where this logger event occured.
+A similar example can be found in the `eosio.token` template:
 
-**NOTE:** If you run your tests using *CMake*, you'll need to apply the verbose mode to be able to see this output.
+```
+logger_info("quantity.amount: ", quantity.amount);
+```
+
+The effect of the above code entry is the following output in test results:
+
+```
+INFO quantity.amount: 1000000 @ 8:43:8 contract.name.cpp[54](issue)
+```
+
+Thus the logger utility offers you much more than just monitoring the value of a variable. You also get the method name, the file name & line number where this logger event occured.
+
+**NOTE:** If you run your tests using *CMake*, you'll need to apply the verbose mode to be able to see the logger output.
