--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -16,8 +16,11 @@ Open a bash terminal (or if you are on Windows, open an Ubuntu bash terminal sup
 To start your own single-node local testnet:
 
 ```
-import node
-node.reset()
+import setup
+import teos
+import cleos
+cleos.dont_keosd() # do not use the EOSIO keosd Wallet Manager
+ok = teos.node_reset()
 ```
 
 On MacOS the *EOSIO* process is run in the background with no visible interface. However in Ubuntu & Windows it's launched in a separate window.
@@ -25,7 +28,7 @@ On MacOS the *EOSIO* process is run in the background with no visible interface.
 To verify the *EOSIO* node is running or to get information about the current state of the testnet:
 
 ```
-node.info()
+cleos.GetInfo()
 ```
 
 ## Manage Local Testnet
@@ -33,19 +36,19 @@ node.info()
 To stop the current testnet:
 
 ```
-node.stop()
+teos.node_stop()
 ```
 
 To continue running the same testnet:
 
 ```
-node.run()
+teos.node_run()
 ```
 
 To stop the current testnet and start a new one:
 
 ```
-node.reset()
+teos.node_reset()
 ```
 
 ## Initialize Workspace
@@ -68,10 +71,11 @@ If you need additional test accounts, you can easily create them:
 
 ```
 from eosf import *
-charlie = Account("charlie", sess.eosio)
+charlie = Account()
+print(charlie.account())
 ```
 
-**NOTE:** The first argument indicates the new account's name, whereas the second indicates the master account, in this case the default `eosio` account.
+**NOTE:** Default argument used. See documentation.
 
 If you need to lock or unlock your wallet, use the `wallet` object to do it:
 
@@ -87,11 +91,13 @@ sess.wallet.unlock()
 
 ## Create reference to the EOS Token Contract
 
-To create a reference to an already compiled contract just supply the path to the folder where it's located:
+To create a reference to an already compiled contract just supply an account and the path to the folder where it's located:
 
 ```
 from eosf import *
-contract = Contract("/path/to/your/smart-contract/folder")
+account = Account()
+wallet.import_key(account)
+contract = Contract(account, "/path/to/your/smart-contract/folder")
 ```
 
 **NOTE:** You need to supply a valid path to the folder where your smart-contract is located, for example:
