--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -95,43 +95,41 @@ To create a reference to an already compiled contract just supply an account and
 
 ```
 from eosf import *
-account = Account()
-wallet.import_key(account)
-contract = Contract(account, "/path/to/your/smart-contract/folder")
+account_et = Account()
+sess.wallet.import_key(account_et)
+contract_et = Contract(account_et, "/path/to/your/smart-contract/folder")
 ```
 
 **NOTE:** You need to supply a valid path to the folder where your smart-contract is located, for example:
 
 ```
-contract = Contract("/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
+contract_et = Contract(account_et, "/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
 ```
 
 Alternatively, supply just the name of the folder, if it can be found in a standard location, i.e. `eos/build/contracts` or `eosfactory/contracts`. This way you can have an easy access to all demo contracts that are shipped with both *EOSIO* and EOSFactory:
 
 ```
-contract = Contract("eosio.token")
+contract_et = Contract(account_et, "eosio.token")
 ```
-
-**NOTE:** When a new contract object is initiated several things are happening behind the scenes: a new account is created with a new pair of keys and the contract is assigned to this new account.
 
 ## Deploy the EOS Token Contract
 
 At this stage the contract has no code deployed. You can check it by running its `get_code` method:
 
 ```
-contract.get_code()
+contract_et.code()
 ```
 
 To deploy the contract use its `deploy` method:
 
 ```
-contract.deploy()
+contract_et.deploy()
 ```
 
 And now you can verify that the hash of the deployed code is non-zero:
 
 ```
-contract.get_code()
+contract_et.get_code()
 ```
 
 ## Create the EOS Token
@@ -139,8 +137,13 @@ contract.get_code()
 To create a new token we call the `create` action on the `eosio.token` contract with the proper arguments for this action:
 
 ```
-contract.push_action("create", '{"issuer":"eosio", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}')
-```
+action = contract_et.push_action(
+    "create", 
+    '{"issuer":"' 
+        + str(sess.account_eosio) 
+        + '", "maximum_supply":"1000000000.0000 EOS", \
+        "can_freeze":0, "can_recall":0, "can_whitelist":0}')
+
 
 **NOTE:** The `push_action` method takes two arguments: the action name and its arguments in JSON format. Optionally, you can also add a third argument, i.e. the account whose permission is needed, but in this case it's not necessary, as the permission defaults to the account holding the contract.
 
@@ -151,7 +154,11 @@ contract.push_action("create", '{"issuer":"eosio", "maximum_supply":"1000000000.
 Now that we have created the token, the issuer can issue new tokens to `alice`:
 
 ```
-contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":"memo"}', sess.eosio)
+action = contract_et.push_action(
+    "issue", 
+    '{"to":"' + str(sess.alice)
+        + '", "quantity":"100.0000 EOS", "memo":"memo"}', \
+        sess.account_eosio)
 ```
 
 **NOTE:** In this case the permission is assigned to the default `eosio` account.
@@ -161,7 +168,13 @@ contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":
 Now that `alice` has tokens, we will transfer some of them to `carol`: 
 
 ```
-contract.push_action("transfer", '{"from":"alice", "to":"carol", "quantity":"25.0000 EOS", "memo":"memo"}', sess.alice)
+action = contract_et.push_action(
+    "transfer", 
+    '{"from":"' 
+        + str(sess.alice)
+        + '", "to":"' + str(sess.carol)
+        + '", "quantity":"25.0000 EOS", "memo":"memo"}', 
+    sess.alice)
 ```
 
 **NOTE:** As the third argument we pass the reference to the `alice` account to indicate that she is the one who authorized this action.
@@ -173,11 +186,11 @@ From the contract's ABI we know that the table keeping track of the token balanc
 Let's check the state of both accounts involved in the previous transaction:
 
 ```
-contract.get_table("accounts", sess.alice)
+table_alice = contract_et.get_table("accounts", sess.alice)
 ```
 
 ```
-contract.get_table("accounts", sess.carol)
+table_carol = contract_et.get_table("accounts", sess.carol)
 ```
 
 **NOTE:** The `get_table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
