--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -161,7 +161,7 @@ action = contract_et.push_action(
         sess.account_eosio)
 ```
 
-**NOTE:** In this case the permission is assigned to the default `eosio` account.
+**NOTE:** In this case the permission is assigned to the default `account_eosio` account.
 
 ## Transfer EOS Tokens
 
