account factory, account restore

--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -71,7 +71,7 @@ If you need additional test accounts, you can easily create them:
 
 ```
 from eosf import *
-charlie = Account()
+charlie = account()
 print(charlie.account())
 ```
 
@@ -95,7 +95,7 @@ To create a reference to an already compiled contract just supply an account and
 
 ```
 from eosf import *
-account_et = Account()
+account_et = account()
 sess.wallet.import_key(account_et)
 contract_et = Contract(account_et, "/path/to/your/smart-contract/folder")
 ```
