--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -19,7 +19,7 @@ To start your own single-node local testnet:
 import setup
 import teos
 import cleos
-cleos.dont_keosd() # do not use the EOSIO keosd Wallet Manager
+cleos.use_keosd(False) # do not use the EOSIO keosd Wallet Manager
 ok = teos.node_reset()
 ```
 
