--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -8,7 +8,7 @@ We've tested EOSFactory on the following platforms:
 - MacOS 10.13 (High Sierra)
 - Windows 10 (version 1803)
 
-**NOTE:** EOSFactory is now compatible with the latest release of *EOSIO*, tagged as `v1.0.7`, and from now on we expect it to be fully compatible with subsequent *EOSIO* releases.
+**NOTE:** EOSFactory is now compatible with the latest release of *EOSIO*, tagged as `v1.0.7`, and from now on we expect it to be fully compatible with any subsequent *EOSIO* release.
 
 **NOTE:** EOSFactory requires *EOSIO* to be compiled from the source code, i.e. not deployed in Docker.
 
@@ -135,6 +135,15 @@ At this stage you need to source the system variables that were created during E
   ```
   source ~/.bash_profile
   ```
+
+## Install Python TermColor
+
+To make the unit test ouptut more readable we recommend to install the [termcolor](https://pypi.org/project/termcolor/) extention for Python:
+
+```
+sudo apt install python3-pip
+python3 -m pip install termcolor
+```
 
 ## Test EOSFactory
 
