--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -138,7 +138,7 @@ At this stage you need to source the system variables that were created during E
 
 ## Install Python TermColor
 
-To make the unit test ouptut more readable we recommend to install the [termcolor](https://pypi.org/project/termcolor/) extention for Python:
+In order to make unit test ouptut more readable we recommend installing the [termcolor](https://pypi.org/project/termcolor/) extention for Python:
 
 ```
 sudo apt install python3-pip
