--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -19,8 +19,8 @@ To start your own single-node local testnet:
 import setup
 import teos
 import cleos
-cleos.use_keosd(False) # do not use the EOSIO keosd Wallet Manager
-ok = teos.node_reset()
+setup.use_keosd(False) # do not use the EOSIO keosd Wallet Manager
+eosf.reset()
 ```
 
 On MacOS the *EOSIO* process is run in the background with no visible interface. However in Ubuntu & Windows it's launched in a separate window.
@@ -36,19 +36,19 @@ cleos.GetInfo()
 To stop the current testnet:
 
 ```
-teos.node_stop()
+eosf.stop()
 ```
 
 To continue running the same testnet:
 
 ```
-teos.node_run()
+eosf.run()
 ```
 
 To stop the current testnet and start a new one:
 
 ```
-teos.node_reset()
+eosf.reset()
 ```
 
 ## Initialize Workspace
@@ -140,7 +140,7 @@ To create a new token we call the `create` action on the `eosio.token` contract 
 action = contract_et.push_action(
     "create", 
     '{"issuer":"' 
-        + str(sess.account_eosio) 
+        + str(sess.account_master) 
         + '", "maximum_supply":"1000000000.0000 EOS", \
         "can_freeze":0, "can_recall":0, "can_whitelist":0}')
 
@@ -158,10 +158,10 @@ action = contract_et.push_action(
     "issue", 
     '{"to":"' + str(sess.alice)
         + '", "quantity":"100.0000 EOS", "memo":"memo"}', \
-        sess.account_eosio)
+        sess.account_master)
 ```
 
-**NOTE:** In this case the permission is assigned to the default `account_eosio` account.
+**NOTE:** In this case the permission is assigned to the default `account_master` account.
 
 ## Transfer EOS Tokens
 
