get_table, get_console tested

--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -186,14 +186,14 @@ From the contract's ABI we know that the table keeping track of the token balanc
 Let's check the state of both accounts involved in the previous transaction:
 
 ```
-table_alice = contract_et.get_table("accounts", sess.alice)
+table_alice = contract_et.table("accounts", sess.alice)
 ```
 
 ```
-table_carol = contract_et.get_table("accounts", sess.carol)
+table_carol = contract_et.table("accounts", sess.carol)
 ```
 
-**NOTE:** The `get_table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
+**NOTE:** The `table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
 
 ## Exit Python CLI
 
