--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -16,11 +16,8 @@ Open a bash terminal (or if you are on Windows, open an Ubuntu bash terminal sup
 To start your own single-node local testnet:
 
 ```
-import setup
-import teos
-import cleos
-setup.use_keosd(False) # do not use the EOSIO keosd Wallet Manager
-eosf.reset()
+import node
+node.reset()
 ```
 
 On MacOS the *EOSIO* process is run in the background with no visible interface. However in Ubuntu & Windows it's launched in a separate window.
@@ -28,7 +25,7 @@ On MacOS the *EOSIO* process is run in the background with no visible interface.
 To verify the *EOSIO* node is running or to get information about the current state of the testnet:
 
 ```
-cleos.GetInfo()
+node.info()
 ```
 
 ## Manage Local Testnet
@@ -36,13 +33,13 @@ cleos.GetInfo()
 To stop the current testnet:
 
 ```
-eosf.stop()
+node.stop()
 ```
 
 To continue running the same testnet:
 
 ```
-eosf.run()
+node.run()
 ```
 
 To stop the current testnet and start a new one:
@@ -70,12 +67,10 @@ The initialization process does the following things:
 If you need additional test accounts, you can easily create them:
 
 ```
-from eosf import *
-charlie = account()
+import eosf
+charlie = eosf.account()
 print(charlie.account())
 ```
-
-**NOTE:** Default argument used. See documentation.
 
 If you need to lock or unlock your wallet, use the `wallet` object to do it:
 
@@ -87,29 +82,29 @@ sess.wallet.lock()
 sess.wallet.unlock()
 ```
 
-**NOTE:** You don't need to supply the password, as it's kept for your convenience by Python. Obviously, this only makes sense in a development environment.
+**NOTE:** You don't need to supply the password, as it's kept for your convenience by Python. Obviously, this is  only secure in a development environment.
 
 ## Create reference to the EOS Token Contract
 
 To create a reference to an already compiled contract just supply an account and the path to the folder where it's located:
 
 ```
-from eosf import *
-account_et = account()
-sess.wallet.import_key(account_et)
-contract_et = Contract(account_et, "/path/to/your/smart-contract/folder")
+import eosf
+account = eosf.account()
+sess.wallet.import_key(account)
+contract = eosf.Contract(account, "/path/to/your/smart-contract/folder")
 ```
 
 **NOTE:** You need to supply a valid path to the folder where your smart-contract is located, for example:
 
 ```
-contract_et = Contract(account_et, "/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
+contract = eosf.Contract(account, "/mnt/d/Workspaces/EOS/eos/build/contracts/eosio.token")
 ```
 
 Alternatively, supply just the name of the folder, if it can be found in a standard location, i.e. `eos/build/contracts` or `eosfactory/contracts`. This way you can have an easy access to all demo contracts that are shipped with both *EOSIO* and EOSFactory:
 
 ```
-contract_et = Contract(account_et, "eosio.token")
+contract = eosf.Contract(account, "eosio.token")
 ```
 
 ## Deploy the EOS Token Contract
@@ -117,19 +112,19 @@ contract_et = Contract(account_et, "eosio.token")
 At this stage the contract has no code deployed. You can check it by running its `get_code` method:
 
 ```
-contract_et.code()
+contract.code()
 ```
 
 To deploy the contract use its `deploy` method:
 
 ```
-contract_et.deploy()
+contract.deploy()
 ```
 
 And now you can verify that the hash of the deployed code is non-zero:
 
 ```
-contract_et.get_code()
+contract.code()
 ```
 
 ## Create the EOS Token
@@ -186,14 +181,14 @@ From the contract's ABI we know that the table keeping track of the token balanc
 Let's check the state of both accounts involved in the previous transaction:
 
 ```
-table_alice = contract_et.table("accounts", sess.alice)
+table_alice = contract_et.get_table("accounts", sess.alice)
 ```
 
 ```
-table_carol = contract_et.table("accounts", sess.carol)
+table_carol = contract_et.get_table("accounts", sess.carol)
 ```
 
-**NOTE:** The `table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
+**NOTE:** The `get_table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
 
 ## Exit Python CLI
 
@@ -204,3 +199,4 @@ exit()
 ```
 
 Alternatively, use the `ctrl-D` shortcut.
+```
