--- a/docs/sphinx/source/tutorials/03.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/03.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -4,9 +4,9 @@ The purpose of this tutorial is to demonstrate how EOSFactory can be combined wi
 
 ## Prerequisites
 
-- This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](https://mail.google.com/mail/u/0/01.InstallingEOSFactory.html).
+- This tutorial assumes that you have successfully installed EOSFactory. If it's not the case, please refer to [Installing EOSFactory](01.InstallingEOSFactory.html).
 
-- We assume that you are familiar with the material covered in [Interacting with EOS Contracts in EOSFactory](https://mail.google.com/mail/u/0/02.InteractingWithEOSContractsInEOSFactory.html).
+- We assume that you are familiar with the material covered in [Interacting with EOS Contracts in EOSFactory](02.InteractingWithEOSContractsInEOSFactory.html).
 
 - We also assume you have [Visual Studio Code](https://code.visualstudio.com/) installed. If you are on Windows and run VSC for the first time, in order to get access to *Windows Subsystem for Linux* bash terminal inside VSC, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option:
 
