--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -45,7 +45,7 @@ node.run()
 To stop the current testnet and start a new one:
 
 ```
-eosf.reset()
+node.reset()
 ```
 
 ## Initialize Workspace
@@ -64,14 +64,6 @@ The initialization process does the following things:
 * creates several test accounts: `alice`, `bob` & `carol`
 * creates a wallet and imports into it the keys of all the above accounts
 
-If you need additional test accounts, you can easily create them:
-
-```
-import eosf
-charlie = eosf.account()
-print(charlie.account())
-```
-
 If you need to lock or unlock your wallet, use the `wallet` object to do it:
 
 ```
@@ -84,14 +76,34 @@ sess.wallet.unlock()
 
 **NOTE:** You don't need to supply the password, as it's kept for your convenience by Python. Obviously, this is  only secure in a development environment.
 
+## Create test accounts
+
+If you need additional test accounts different from the ones genereated by `sess.init()` , you can easily create them:
+
+```
+import eosf
+charlie = eosf.account()
+```
+
+You can print the details of an account, for example:
+
+```
+print(charlie.account())
+```
+
 ## Create reference to the EOS Token Contract
 
-To create a reference to an already compiled contract just supply an account and the path to the folder where it's located:
+To create a reference to an already compiled contract first create an account and import its key to a wallet:
 
 ```
 import eosf
 account = eosf.account()
 sess.wallet.import_key(account)
+```
+
+And then create the reference to an existing constract by supplying the path to the folder where it's located:
+
+```
 contract = eosf.Contract(account, "/path/to/your/smart-contract/folder")
 ```
 
@@ -109,13 +121,13 @@ contract = eosf.Contract(account, "eosio.token")
 
 ## Deploy the EOS Token Contract
 
-At this stage the contract has no code deployed. You can check it by running its `get_code` method:
+At this stage the contract has no code deployed. You can check it by running its `code()` method:
 
 ```
 contract.code()
 ```
 
-To deploy the contract use its `deploy` method:
+To deploy the contract use its `deploy()` method:
 
 ```
 contract.deploy()
@@ -129,16 +141,11 @@ contract.code()
 
 ## Create the EOS Token
 
-To create a new token we call the `create` action on the `eosio.token` contract with the proper arguments for this action:
+To create a new token we call the `create` action on the `eosio.token` contract:
 
 ```
-action = contract_et.push_action(
-    "create", 
-    '{"issuer":"' 
-        + str(sess.account_master) 
-        + '", "maximum_supply":"1000000000.0000 EOS", \
-        "can_freeze":0, "can_recall":0, "can_whitelist":0}')
-
+contract.push_action("create", '{"issuer":"' + str(sess.eosio) + '", "maximum_supply":"1000000000.0000 EOS", "can_freeze":0, "can_recall":0, "can_whitelist":0}')
+```
 
 **NOTE:** The `push_action` method takes two arguments: the action name and its arguments in JSON format. Optionally, you can also add a third argument, i.e. the account whose permission is needed, but in this case it's not necessary, as the permission defaults to the account holding the contract.
 
@@ -149,27 +156,17 @@ action = contract_et.push_action(
 Now that we have created the token, the issuer can issue new tokens to `alice`:
 
 ```
-action = contract_et.push_action(
-    "issue", 
-    '{"to":"' + str(sess.alice)
-        + '", "quantity":"100.0000 EOS", "memo":"memo"}', \
-        sess.account_master)
+contract.push_action("issue", '{"to":"' + str(sess.alice) + '", "quantity":"100.0000 EOS", "memo":"memo"}', sess.eosio)
 ```
 
-**NOTE:** In this case the permission is assigned to the default `account_master` account.
+**NOTE:** In this case the permission is assigned to the default `eosio` account.
 
 ## Transfer EOS Tokens
 
 Now that `alice` has tokens, we will transfer some of them to `carol`: 
 
 ```
-action = contract_et.push_action(
-    "transfer", 
-    '{"from":"' 
-        + str(sess.alice)
-        + '", "to":"' + str(sess.carol)
-        + '", "quantity":"25.0000 EOS", "memo":"memo"}', 
-    sess.alice)
+contract.push_action("transfer", '{"from":"' + str(sess.alice) + '", "to":"' + str(sess.carol) + '", "quantity":"25.0000 EOS", "memo":"memo"}', sess.alice)
 ```
 
 **NOTE:** As the third argument we pass the reference to the `alice` account to indicate that she is the one who authorized this action.
@@ -181,14 +178,14 @@ From the contract's ABI we know that the table keeping track of the token balanc
 Let's check the state of both accounts involved in the previous transaction:
 
 ```
-table_alice = contract_et.get_table("accounts", sess.alice)
+contract.table("accounts", sess.alice)
 ```
 
 ```
-table_carol = contract_et.get_table("accounts", sess.carol)
+contract.table("accounts", sess.carol)
 ```
 
-**NOTE:** The `get_table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
+**NOTE:** The `table()` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
 
 ## Exit Python CLI
 
@@ -199,4 +196,3 @@ exit()
 ```
 
 Alternatively, use the `ctrl-D` shortcut.
-```
