info instead of account

--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -88,7 +88,7 @@ charlie = eosf.account()
 You can print the details of an account, for example:
 
 ```
-print(charlie.account())
+print(charlie.info())
 ```
 
 ## Create reference to the EOS Token Contract
