--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -83,6 +83,7 @@ If you need additional test accounts different from the ones genereated by `sess
 ```
 import eosf
 charlie = eosf.account()
+sess.wallet.import_key(charlie)
 ```
 
 You can print the details of an account, for example:
