--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -175,7 +175,7 @@ If the test fails due to the `ModuleNotFoundError` error, make sure that after b
 
 #### Case 3
 
-If the test fails while executing `eosf.reset() ` with the `string indices must be integers` error, make sure you have EOS `dawn-v4.0.0`  installed. Also, make sure no other instance of `nodeos` is running on your machine.
+If the test fails while executing `node.reset() ` with the `string indices must be integers` error, make sure you have EOS `v1.0.7` installed. Also, make sure no other instance of `nodeos` is running on your machine.
 
 ## Subsequent EOSFactory builds
 
@@ -205,4 +205,3 @@ And to get help for the `build` script:
 ```
 ./build.sh -h
 ```
-
