keosd setting fixed, tested all

--- a/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
+++ b/docs/sphinx/source/tutorials/04.WorkingWithEOSContractsUsingEOSFactoryInVSC.md
@@ -29,6 +29,11 @@ And then run the following command:
 ```
 python3 ./pyteos/eosf.py contract.name skeleton
 ```
+or
+
+```
+$eosf bootstrap contract contract.name skeleton
+```
 
 **NOTE:** If you are on Windows and have not restarted your WSL bash terminal after EOSFactory installation,  you'll need to do so before you execute this command (if you are using WSL bash terminal inside *Visual Studio Code*, restart your VSC instead).
 
