build in testing split

--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -102,7 +102,7 @@ account = eosf.account()
 sess.wallet.import_key(account)
 ```
 
-And then create the reference to an existing constract by supplying the path to the folder where it's located:
+And then create the reference to an existing constract by supplying an account which will be holding the contract and the path to the folder where the contract is located:
 
 ```
 contract = eosf.Contract(account, "/path/to/your/smart-contract/folder")
