--- a/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.md
@@ -32,11 +32,18 @@ import sess
 sess.init()
 ```
 
-To create a new contract from a pre-defined template use the `ContractFromTemplate` class and pass to its constructor a name of your choice, for example:
+Then create an account which will be holding the contract:
 
 ```
 import eosf
-contract = eosf.template("hello.world")
+account = eosf.account()
+sess.wallet.import_key(account)
+```
+
+To create a new contract from a pre-defined template use the `ContractFromTemplate` class and pass to its constructor two paremetres: a reference to an existing account and a name for the contract, for example:
+
+```
+contract = eosf.ContractFromTemplate(account, "hello.world")
 ```
 
 **NOTE:**  Do not use spaces in contract names. What is allowed are letters, numbers, underscores `_`, dots `.` and dashes `- `. 
