--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -163,6 +163,12 @@ python3 ./tests/unittest2.py
 python3 ./tests/unittest3.py
 ```
 
+**NOTE:** When running `unittest3` this error is to be expected, as we are testing failure due to authority mismatch:
+
+```
+Error 3090004: missing required authority
+```
+
 ## Troubleshooting
 
 #### Case 1
