--- a/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
+++ b/docs/sphinx/source/tutorials/01.InstallingEOSFactory.md
@@ -141,8 +141,13 @@ At this stage you need to source the system variables that were created during E
 In order to make unit test ouptut more readable we recommend installing the [termcolor](https://pypi.org/project/termcolor/) extention for Python:
 
 ```
-sudo apt install python3-pip
 python3 -m pip install termcolor
+```
+
+**NOTE:** If the above command fails you might need to install `python3-pip`:
+
+```
+sudo apt install python3-pip
 ```
 
 ## Test EOSFactory
