--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -50,7 +50,14 @@ node.reset()
 
 ## Initialize Workspace
 
-To initialize the workspace:
+First, make sure a local testnet is running:
+
+```
+import node
+node.reset()
+```
+
+Then you can initialize the workspace:
 
 ```
 import sess
@@ -60,8 +67,8 @@ sess.init()
 The initialization process does the following things:
 
 * deploys the *Bios* contract
-* creates a reference to the default `eosio` account
-* creates several test accounts: `alice`, `bob` & `carol`
+* creates a reference to the default `eosio` account, which can be accessed as `sess.eosio`,
+* creates several test accounts: `alice`, `bob` & `carol`, which can be accessed as `sess.alice`, `sess.bob` & `sess.carol`.
 * creates a wallet and imports into it the keys of all the above accounts
 
 If you need to lock or unlock your wallet, use the `wallet` object to do it:
@@ -82,7 +89,7 @@ If you need additional test accounts different from the ones genereated by `sess
 
 ```
 import eosf
-charlie = eosf.account()
+charlie = eosf.account(sess.eosio)
 sess.wallet.import_key(charlie)
 ```
 
@@ -98,7 +105,7 @@ To create a reference to an already compiled contract first create an account an
 
 ```
 import eosf
-account = eosf.account()
+account = eosf.account(sess.eosio)
 sess.wallet.import_key(account)
 ```
 
