--- a/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/sphinx/source/tutorials/02.InteractingWithEOSContractsInEOSFactory.md
@@ -99,7 +99,21 @@ You can print the details of an account, for example:
 print(charlie.info())
 ```
 
+**NOTE:** If you don't specify the name parameter in `eosf.account()`, a random name will be applied (which is useful on a public testnet where extra restrictions apply). However if you want to assign a specific name to an account, you can still do it:
+
+```
+charlie = eosf.account(sess.eosio, name="charlie")
+```
+
 ## Create reference to the EOS Token Contract
+
+We assume that a local testnet is running and it has been initialized:
+
+```
+import node, sess
+node.reset()
+sess.init()
+```
 
 To create a reference to an already compiled contract first create an account and import its key to a wallet:
 
